@startuml
hide methods

class Session {
    id: long
    token: String

    user: User
}

class User {
    id: long
    token: UUID
    username: String
    password: String
    bio: String
    image: String
    coins: int
    elo: int
    wins: int
    losses: int

    stack: List<Card>
    deck: List<Card>
    trades: List<Trade>
}

class Card {
    id: long
    token: UUID
    name: String
    damage: double

    user: User
    damageType: DamageType
    trade: Trade
    package: Package
}

enum DamageType {
    FIRE,
    WATER,
    NORMAL
}

class SpellCard extends Card {
    criticalHitChance: double
}

class MonsterCard extends Card {
    defence: double
}

class Package {
    id: long
    token: UUID
    price: int
    cards: List<Card>
}

class Trade {
    id: long
    token: UUID
    type: CardType
    minimumDamage: double

    cardToTrade: Card
    trader: User
}

enum CardTypes {
    MONSTER,
    SPELL
}

User "0..1" o--o "0..20" Card : stack
User "0..1" o--o "0..5" Card : deck
User "0..1" o--* "1" Session

Card -left- DamageType
Card "0..1" o-right-* "1" Trade
Card "5" o--* "1" Package

Trade -- CardTypes
Trade "0..n" *-up-o "1" User
@enduml